kustomize/overlays/uat/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mpaviewer-deployment
spec:
  selector:
    matchLabels:
      app: mpaviewer-deployment
  template:
    metadata:
      labels:
        app: mpaviewer-deployment
    spec:
      containers:
        - name: mpaviewer
          command:
            - R
            - '-e'
            - options('shiny.port'=8080,shiny.host='0.0.0.0');shiny::runApp('/app', host='0.0.0.0', port=8080)
          volumeMounts:
            - name: mpaviewer-data-blob-uat
              mountPath: /app/inst/data
      volumes:
        - name: mpaviewer-data-blob-uat
          persistentVolumeClaim:
            claimName: pvc-mpaviewer-data-blob-uat
