kustomize/overlays/uat/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: mpaviewer-clusterip
spec:
  type: ClusterIP
  selector:
    app: mpaviewer-deployment
    variant: uat
